--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -53,6 +53,9 @@
       <div *ngIf="active_tab === 'team'">
         <app-overview></app-overview>
       </div>
+      <div *ngIf="active_tab === 'ops'">
+        <app-operations></app-operations>
+      </div>
       <div *ngIf="active_tab === 'player'">
         <app-index-player></app-index-player>
       </div>
