--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -105,6 +105,9 @@
         <div class="">
           <img style="max-width: 100%; margin: auto;" src="assets/images/architecture_auth.png">
         </div>
+        <div class="">
+          <img style="max-width: 100%; margin: auto;" src="assets/images/link_script.png">
+        </div>
 
         <br/>
         <br/>
