--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -36,7 +36,7 @@
             We added the option to import existing intel when you join or create a new team. If you have previously indexed some reports and join a new team on the same game world, you will find a popup message on the team overview.
             This popup allows you to import all existing intel to the new team. You can find your team overview by going to My teams on grepodata.com and selecting your new team.
           </p>
-          <br/><img style="max-width: 80vw;" src="../../assets/images/intel_imports.png"><br/><br/>
+          <br/><img style="max-width: 100%;" src="../../assets/images/intel_imports.png"><br/><br/>
         </app-script-version>
 
         <hr/>
