--- a/src/app/layout/alert/alert.component.scss
+++ b/src/app/layout/alert/alert.component.scss
@@ -27,6 +27,10 @@
     background-color: rgb(237, 247, 237);
   }
 
+  &.info2 {
+    background-color: #efd9fd;
+  }
+
   &__title {
     font-size: 1.7rem;
     font-weight: 600;
@@ -59,6 +63,10 @@
 
     &.success {
       color: #4caf50;
+    }
+
+    &.info2 {
+      color: #3b2e58;
     }
   }
 
